will create 50 fake users
